 - Qt: Make audio channel/video layer options shortcut mappable
 - GBA Memory: Optimize stalling behavior
 - 3DS: Attempt to use Core 2 for threads
 - GUI: Screenshot dimensions are now passed through
 - GUI: Add back logging
 - PSP2: Add rumble for PS TV
 - PSP2: Add fit-to-height screen mode
 - GBA Video: Remove old slow path fallback
 - GBA Video: Optimize sprite drawing

0.4.1: (2016-07-11)
Bugfixes:
 - All: Fix several file handle leaks
 - All: Fix instruction tables getting zeroed when linking sometimes
 - ARM7: Fix flags on SBC/RSC
 - ARM7: Fix setting spsr privilege bits when spsr is empty
 - GBA Audio: Reset audio FIFO DMA if an invalid destination is set
 - GBA BIOS: Fix RegisterRamReset setting DISPCNT to the wrong value
 - GBA BIOS: Fix ArcTan2 accuracy and boundary conditions
 - GBA Memory: Fix executing code from OBJ region of VRAM
 - GBA Serialize: Fix memory corruption bug in GBAExtdataSerialize
 - GBA Serialize: Fix loading savegames from savestates
 - OpenGL: Correct boolean vector strcmp strings for uniforms
 - Qt: Fix sending gameStopped twice
 - Qt: Fix hang if audio sync is enabled and audio fails to initialize
 - Qt: Fix initial state of key mapping
 - Qt: Initialize m_useBios
 - SDL: Fix joystick initialization on BSD
 - SDL: Fix potential joystick crash in games with rumble
 - SDL: Fix SDL 1.2 build
 - SDL: Fix sporadic crash when deinitializing audio
 - Shaders: Fix AGS-001 shader with some bad drivers
 - Util: Use closesocket on Windows
 - Util: Fix socket bind addresses
 - VFS: Fix reading 7z archives without rewinding first
 - VFS: VFileFromFD should not open directories
 - Wii: Fix tilting direction
 - Util: Fix realloc semantics in utf16to8
Misc:
 - All: Allow use of external minizip library
 - Debugger: CLI debugger now exits when end-of-stream is reached
 - FFmpeg: Update dependencies on Ubuntu
 - GBA: Slightly optimize GBAProcessEvents
 - GBA: Add overrides for DBZ: Legacy of Goku II and Ueki no Housoku