@@ -51,6 +51,7 @@ Misc:
  - PSP2: Add fit-to-height screen mode
  - GBA Video: Remove old slow path fallback
  - GBA Video: Optimize sprite drawing
+ - GBA BIOS: Use custom ArcTan, not relying on OS
 
 0.4.1: (2016-07-11)
 Bugfixes:
